# vulnexus_backend

./: .gitignore  README.md  alembic.ini  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: auth.py  config.py  deps.py  main.py  rate_limit.py
app/models/: db_models.py  ml_models.py  pydantic_models.py
app/routes/: auth_routes.py  dashboard_routes.py  report_routes.py  scan_routes.py
app/services/: ai_risk_model.py  cve_mapper.py  file_scanner.py  report_generator.py  rule_engine.py  tasks.py  web_scanner.py
app/utils/: cache.py  file_utils.py  logger.py  tls_utils.py
rust_modules/: Cargo.toml
rust_modules/src/: crypto_analysis.rs  lib.rs
scripts/: init_db.py  train_model.py
tests/: test_ai_model.py  test_file_scanner.py  test_integration.py  test_web_scanner.py
