[package]
name = "crypto_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

[build-dependencies]
pyo3-build-config = "0.20"
